2014-08-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #38614 dtostrf - wrong behavior or wrong documentation
	* include/stdlib.h (dtostrf): add "possible for the decimal dot

2014-08-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #39779 PCIE0 and PCIE1 defined incorrectly for mega165a and mega165pa devices
	* include/avr/iom165a.h: Create a separate IO header file for
	the ATmega165A (derived from ATmega165PA which has already been
	correct)
	* include/avr/io.h: Include iom165a.h
	* include/avr/Makefile.am: Add iom165a.h

2014-08-05  Senthil Kumar Selvaraj  <senthil_kumar.selvaraj@atmel.com>

	* include/avr/io1200.h: Add RAMSTART.
	* include/avr/io2313.h: Likewise.
	* include/avr/io2323.h: Likewise.
	* include/avr/io2333.h: Likewise.
	* include/avr/io2343.h: Likewise.
	* include/avr/io43u32x.h: Likewise.
	* include/avr/io43u35x.h: Likewise.
	* include/avr/io4414.h: Likewise.
	* include/avr/io4433.h: Likewise.
	* include/avr/io4434.h: Likewise.
	* include/avr/io76c711.h: Likewise.
	* include/avr/io8515.h: Likewise.
	* include/avr/io8534.h: Likewise.
	* include/avr/io8535.h: Likewise.
	* include/avr/io86r401.h: Likewise.
	* include/avr/io90pwm216.h: Likewise.
	* include/avr/io90pwm2b.h: Likewise.
	* include/avr/io90pwm316.h: Likewise.
	* include/avr/io90pwm3b.h: Likewise.
	* include/avr/ioat94k.h: Likewise.
	* include/avr/iocan128.h: Likewise.
	* include/avr/iocan32.h: Likewise.
	* include/avr/iocan64.h: Likewise.
	* include/avr/iom103.h: Likewise.
	* include/avr/iom128.h: Likewise.
	* include/avr/iom1280.h: Likewise.
	* include/avr/iom161.h: Likewise.
	* include/avr/iom162.h: Likewise.
	* include/avr/iom163.h: Likewise.
	* include/avr/iom165.h: Likewise.
	* include/avr/iom165p.h: Likewise.
	* include/avr/iom169.h: Likewise.
	* include/avr/iom169p.h: Likewise.
	* include/avr/iom16hva.h: Likewise.
	* include/avr/iom2560.h: Likewise.
	* include/avr/iom2561.h: Likewise.
	* include/avr/iom323.h: Likewise.
	* include/avr/iom329.h: Likewise.